tests/baselines/reference/inheritance1(strict=true).errors.txt
inheritance1.ts(14,7): error TS2420: Class 'ImageBase' incorrectly implements interface 'SelectableControl'.
  Property 'select' is missing in type 'Control' but required in type 'SelectableControl'.
inheritance1.ts(18,7): error TS2420: Class 'Locations' incorrectly implements interface 'SelectableControl'.
  Property 'state' is missing in type 'Locations' but required in type 'SelectableControl'.
inheritance1.ts(28,6): error TS2454: Variable 'b' is used before being assigned.
inheritance1.ts(29,5): error TS2454: Variable 'b' is used before being assigned.
inheritance1.ts(31,1): error TS2741: Property 'select' is missing in type 'Control' but required in type 'Button'.
inheritance1.ts(34,6): error TS2454: Variable 't' is used before being assigned.
inheritance1.ts(35,5): error TS2454: Variable 't' is used before being assigned.
inheritance1.ts(37,1): error TS2741: Property 'select' is missing in type 'Control' but required in type 'TextBox'.
inheritance1.ts(40,1): error TS2741: Property 'select' is missing in type 'Control' but required in type 'SelectableControl'.
inheritance1.ts(40,6): error TS2454: Variable 'i' is used before being assigned.
inheritance1.ts(41,5): error TS2454: Variable 'i' is used before being assigned.
inheritance1.ts(46,1): error TS2322: Type 'Image1' is not assignable to type 'SelectableControl'.
inheritance1.ts(46,6): error TS2454: Variable 'i1' is used before being assigned.
inheritance1.ts(47,5): error TS2454: Variable 'i1' is used before being assigned.
inheritance1.ts(52,1): error TS2741: Property 'state' is missing in type 'Locations' but required in type 'SelectableControl'.
inheritance1.ts(52,6): error TS2454: Variable 'l' is used before being assigned.
inheritance1.ts(53,1): error TS2741: Property 'state' is missing in type 'Locations' but required in type 'Control'.
inheritance1.ts(53,5): error TS2454: Variable 'l' is used before being assigned.
inheritance1.ts(55,1): error TS2741: Property 'select' is missing in type 'Control' but required in type 'Locations'.
inheritance1.ts(58,1): error TS2741: Property 'state' is missing in type 'Locations1' but required in type 'SelectableControl'.
inheritance1.ts(58,6): error TS2454: Variable 'l1' is used before being assigned.
inheritance1.ts(59,1): error TS2741: Property 'state' is missing in type 'Locations1' but required in type 'Control'.
inheritance1.ts(59,5): error TS2454: Variable 'l1' is used before being assigned.
inheritance1.ts(61,1): error TS2741: Property 'select' is missing in type 'Control' but required in type 'Locations1'.


==== inheritance1.ts (24 errors) ====
    class Control {
        private state: any;
    }
    interface SelectableControl extends Control {
        select(): void;
    }
    
    class Button extends Control implements SelectableControl {
        select() { }
    }
    class TextBox extends Control {
        select() { }
    }
    class ImageBase extends Control implements SelectableControl{
          ~~~~~~~~~
!!! error TS2420: Class 'ImageBase' incorrectly implements interface 'SelectableControl'.
!!! error TS2420:   Property 'select' is missing in type 'Control' but required in type 'SelectableControl'.
!!! related TS2728 inheritance1.ts:5:5: 'select' is declared here.
    }
    class Image1 extends Control {
    }
    class Locations implements SelectableControl {
          ~~~~~~~~~
!!! error TS2420: Class 'Locations' incorrectly implements interface 'SelectableControl'.
!!! error TS2420:   Property 'state' is missing in type 'Locations' but required in type 'SelectableControl'.
!!! related TS2728 inheritance1.ts:2:13: 'state' is declared here.
        select() { }
    }
    class Locations1 {
        select() { }
    }
    var sc: SelectableControl;
    var c: Control;
    
    var b: Button;
    sc = b;
         ~
!!! error TS2454: Variable 'b' is used before being assigned.
    c = b;
        ~
!!! error TS2454: Variable 'b' is used before being assigned.
    b = sc;
    b = c;
    ~
!!! error TS2741: Property 'select' is missing in type 'Control' but required in type 'Button'.
!!! related TS2728 inheritance1.ts:9:5: 'select' is declared here.
    
    var t: TextBox;
    sc = t;
         ~
!!! error TS2454: Variable 't' is used before being assigned.
    c = t;
        ~
!!! error TS2454: Variable 't' is used before being assigned.
    t = sc;
    t = c;
    ~
!!! error TS2741: Property 'select' is missing in type 'Control' but required in type 'TextBox'.
!!! related TS2728 inheritance1.ts:12:5: 'select' is declared here.
    
    var i: ImageBase;
    sc = i;
    ~~
!!! error TS2741: Property 'select' is missing in type 'Control' but required in type 'SelectableControl'.
!!! related TS2728 inheritance1.ts:5:5: 'select' is declared here.
         ~
!!! error TS2454: Variable 'i' is used before being assigned.
    c = i;
        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i = sc;
    i = c;
    
    var i1: Image1;
    sc = i1;
    ~~
!!! error TS2322: Type 'Image1' is not assignable to type 'SelectableControl'.
         ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    c = i1;
        ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    i1 = sc;
    i1 = c;
    
    var l: Locations;
    sc = l;
    ~~
!!! error TS2741: Property 'state' is missing in type 'Locations' but required in type 'SelectableControl'.
!!! related TS2728 inheritance1.ts:2:13: 'state' is declared here.
         ~
!!! error TS2454: Variable 'l' is used before being assigned.
    c = l;
    ~
!!! error TS2741: Property 'state' is missing in type 'Locations' but required in type 'Control'.
!!! related TS2728 inheritance1.ts:2:13: 'state' is declared here.
        ~
!!! error TS2454: Variable 'l' is used before being assigned.
    l = sc;
    l = c;
    ~
!!! error TS2741: Property 'select' is missing in type 'Control' but required in type 'Locations'.
!!! related TS2728 inheritance1.ts:19:5: 'select' is declared here.
    
    var l1: Locations1;
    sc = l1;
    ~~
!!! error TS2741: Property 'state' is missing in type 'Locations1' but required in type 'SelectableControl'.
!!! related TS2728 inheritance1.ts:2:13: 'state' is declared here.
         ~~
!!! error TS2454: Variable 'l1' is used before being assigned.
    c = l1;
    ~
!!! error TS2741: Property 'state' is missing in type 'Locations1' but required in type 'Control'.
!!! related TS2728 inheritance1.ts:2:13: 'state' is declared here.
        ~~
!!! error TS2454: Variable 'l1' is used before being assigned.
    l1 = sc;
    l1 = c;
    ~~
!!! error TS2741: Property 'select' is missing in type 'Control' but required in type 'Locations1'.
!!! related TS2728 inheritance1.ts:22:5: 'select' is declared here.